--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-ratio/mobile-level2-category-ratio.component.html
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-ratio/mobile-level2-category-ratio.component.html
@@ -1,6 +1,7 @@
 <div class="wrapper">
     <ul class="level2-category-list">
-        <li class="level2-category-list__item">
+        <li *ngFor="let x of level3CategoryRatioList[0].level3List" class="level2-category-list__item ar-{{removeColon(x.name)}}">
+            {{x.name}}
         </li>
     </ul>
 </div>
