--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
-    <app-mobile-level2-category-subject [level1CategoryId]="1" *ngIf="getCurrentLevel1SubjectCategoryName() == 'Chủ thể'" ></app-mobile-level2-category-subject>
-    <app-mobile-level2-category-topic [level1CategoryId]="2" *ngIf="getCurrentLevel1SubjectCategoryName() == 'Chủ đề'" ></app-mobile-level2-category-topic>
-    <app-mobile-level2-category-style [level1CategoryId]="3" *ngIf="getCurrentLevel1SubjectCategoryName() == 'Phong cách'" ></app-mobile-level2-category-style>
-    <app-mobile-level2-category-ratio [level1CategoryId]="4" *ngIf="getCurrentLevel1SubjectCategoryName() == 'Tỉ lệ'" ></app-mobile-level2-category-ratio>
-    <app-mobile-level2-category-color [level1CategoryId]="5" *ngIf="getCurrentLevel1SubjectCategoryName() == 'Màu sắc'" ></app-mobile-level2-category-color>
+    <app-mobile-level2-category-subject style="display: contents;" [level1CategoryId]="1" *ngIf="getCurrentLevel1SubjectCategoryName() == 'Chủ thể'" ></app-mobile-level2-category-subject>
+    <app-mobile-level2-category-topic style="display: contents;" [level1CategoryId]="2" *ngIf="getCurrentLevel1SubjectCategoryName() == 'Chủ đề'" ></app-mobile-level2-category-topic>
+    <app-mobile-level2-category-style style="display: contents;" [level1CategoryId]="3" *ngIf="getCurrentLevel1SubjectCategoryName() == 'Phong cách'" ></app-mobile-level2-category-style>
+    <app-mobile-level2-category-ratio style="display: contents;" [level1CategoryId]="4" *ngIf="getCurrentLevel1SubjectCategoryName() == 'Tỉ lệ'" ></app-mobile-level2-category-ratio>
+    <app-mobile-level2-category-color style="display: contents;" [level1CategoryId]="5" *ngIf="getCurrentLevel1SubjectCategoryName() == 'Màu sắc'" ></app-mobile-level2-category-color>
 </div>
 
 
