--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-ratio/mobile-level2-category-ratio.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-ratio/mobile-level2-category-ratio.component.css
@@ -22,6 +22,10 @@
     align-items: center;
 }
 
+.level2-category-list__item.activated {
+    color: var(--secondary-color);
+    border-color: var(--secondary-color);
+}
 
 .ar-11 {
     aspect-ratio: 1/1;
