--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-topic/mobile-level2-category-topic.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-topic/mobile-level2-category-topic.component.css
@@ -28,6 +28,11 @@
     position: relative;
 }
 
+.level2-category-list__item.activated {
+    color: var(--secondary-color);
+    border-color: var(--secondary-color);
+}
+
 .level2-category-list__item span {
     border-radius: var(--border-radius-2);
     width: 100%;
