--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level3-category/mobile-level3-category-subject/mobile-level3-category-subject.component.html
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level3-category/mobile-level3-category-subject/mobile-level3-category-subject.component.html
@@ -1,52 +1,34 @@
 <div class="wrapper">
-    <ul class="category-level3-list">
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-        <li class="category-level3-list__item">
-            <span class="category-level3-list__item__content">Con người</span>
-        </li>
-    </ul>
+    <ng-container *ngFor="let x of categorySubjectList">
+        <ng-container *ngIf="x.level2CategoryId == categoryMobileLevel2CurrentId">
+            <ul class="category-level3-list">
+                <li (click)="toggleToFilter($event ,{id: 0, name: 'Tất cả' + ' - ' + x.level2CategoryName, level2CategoryId: x.level2CategoryId, level1CategoryId: x.level1CategoryId})"
+                    [ngClass]="{ 'activated': isCategoryTagSelected(0, x.level2CategoryId) }"
+                    class="category-level3-list__item">
+                    <span class="category-level3-list__item__content">Tất cả</span>
+                </li>
+
+                <ng-container *ngFor="let y of x.level3List">
+                    <ng-container *ngIf="isContainsOther(y.name); else otherCondition">
+                        <li (click)="toggleToFilter($event, {id: y.id, name: x.level2CategoryName + ' - Khác', level2CategoryId: x.level2CategoryId, level1CategoryId: x.level1CategoryId})"
+                            [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
+                            class="category-level3-list__item">
+                            <span class="category-level3-list__item__content">
+                                Khác
+                            </span>
+                        </li>
+                    </ng-container>
+
+                    <ng-template #otherCondition>
+                        <li (click)="toggleToFilter($event, {id: y.id, name: y.name, level2CategoryId: x.level2CategoryId, level1CategoryId: x.level1CategoryId})"
+                            [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
+                            class="category-level3-list__item">
+                            <span class="category-level3-list__item__content">{{y.name}}
+                            </span>
+                        </li>
+                    </ng-template>
+                </ng-container>
+            </ul>
+        </ng-container>
+    </ng-container>
 </div>
