--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-category-tag.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-category-tag.component.css
@@ -6,7 +6,7 @@
     border-top: 1px solid var(--dark-border-color);
     background-color: var(--level1-color);
     transition: 0.3s ease-in-out;
-    animation: slide-left-right-fade 0.3s ease-in-out;
+    animation: slide-right-left-fade 0.3s ease-in-out;
 }
 
 .header {
@@ -30,7 +30,7 @@
 
 .header__breadcrumb__item {
     transition: 0.3s ease-in-out;
-    animation: slide-left-right-fade 0.3s ease-in-out;
+    animation: slide-right-left-fade 0.3s ease-in-out;
 }
 
 .header__breadcrumb__item.slash {
