--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-color/mobile-level2-category-color.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-color/mobile-level2-category-color.component.css
@@ -27,6 +27,14 @@
     overflow: hidden;
 }
 
+.level2-category-list__item.activated {
+    border-color: var(--secondary-color);
+}
+
+.level2-category-list__item__img.activated {
+    border-color: var(--secondary-color);
+}
+
 .level2-category-list__item__img {
     width: 100%;
     height: 100%;
