--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-topic/mobile-level2-category-topic.component.html
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-topic/mobile-level2-category-topic.component.html
@@ -1,14 +1,18 @@
-<div class="wrapper">
+<div class="wrapper" id="mobile-topic-wrapper">
     <ul class="level2-category-list">
         <ng-container *ngFor="let x of level3CategoryTopicList[0].level3List">
             <ng-container *ngIf="isContainsOther(x.name); else otherCondition">
-                <li class="level2-category-list__item">
+                <li [ngClass]="{ 'activated': isCategoryTagSelected(x.id, level3CategoryTopicList[0].level2CategoryId) }"
+                    (click)="toggleToFilter($event, { id: x.id, name: level3CategoryTopicList[0].level2CategoryName + ' - Khác', level2CategoryId: level3CategoryTopicList[0].level2CategoryId, level1CategoryId: x.level1CategoryId })"
+                    class="level2-category-list__item">
                     Khác
                 </li>
             </ng-container>
 
             <ng-template #otherCondition>
-                <li class="level2-category-list__item">
+                <li [ngClass]="{ 'activated': isCategoryTagSelected(x.id, level3CategoryTopicList[0].level2CategoryId) }"
+                    (click)="toggleToFilter($event, { id: x.id, name: x.name, level2CategoryId: level3CategoryTopicList[0].level2CategoryId, level1CategoryId: x.level1CategoryId })"
+                    class="level2-category-list__item">
                     <img src="https://natusan.co.uk/cdn/shop/articles/natusan-blog-how-cat-years-work-header.jpg?v=1674474680"
                         alt="religion-picture" class="level2-category-list__item__img">
                     <span>
