--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level3-category/mobile-level3-category-subject/mobile-level3-category-subject.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level3-category/mobile-level3-category-subject/mobile-level3-category-subject.component.css
@@ -9,11 +9,11 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-gap: 9px; 
-    grid-template-rows: repeat(3, 1fr); 
+    grid-template-rows: repeat(3, 1fr);
+    grid-auto-flow: column;
+    grid-auto-columns: min-content;
     align-items: start;
     justify-content: start;
-    grid-auto-flow: column;
 }
 
 .category-level3-list__item {
@@ -22,10 +22,23 @@
     justify-content: space-between;
     border: 1px solid var(--dark-level2-border-color);
     padding: 15px 30px;
+    width: fit-content;
     border-radius: 27px;
     font-size: var(--fs-less);
     gap: 6px;
     transition: 0.21s ease-in-out;
+    margin-right: 9px;
+}
+
+.category-level3-list__item.activated {
+    color: var(--secondary-color);
+    border-color: var(--secondary-color);
+}
+
+.category-level3-list__item__content {
+    text-align: center;
+    width: 100%;
+    height: 100%;
 }
 
 .category-level3-list__item.activated {
