--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level3-category/mobile-level3-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level3-category/mobile-level3-category.component.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 210px;
     transition: 0.3s ease-in-out;
-    animation: slide-left-right-fade 0.3s ease-in-out;
+    animation: slide-right-left-fade 0.3s ease-in-out;
     background-color: var(--level3-color);
     padding: 12px;
 }
