--- a/fe/src/app/shareds/main-shared/components/toast/toast.component.css
+++ b/fe/src/app/shareds/main-shared/components/toast/toast.component.css
@@ -1,18 +1,26 @@
 .toast-wrapper {
     position: fixed;
+    display: flex;
+    width: 100%;
+    align-items: flex-end;
+    justify-content: center;
+    flex-direction: column;
+    padding-right: 30px;
     top: 30px;
-    right: 21px;
     z-index: 9999;
+    pointer-events: none;
 }
 
 .toast-wrapper .toast {
     position: relative;
-    padding: 15px 12px;
+    padding: 15px 21px;
     padding-bottom: 18px;
     margin-bottom: 10px;
-    max-width: 400px;
-    display: grid;
-    grid-template-columns: 70px 1fr 70px;
+    max-width: 81vw;
+    width: 390px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     border-radius: var(--border-radius-1);
     --color: #0abf30;
     background-image:
@@ -21,16 +29,22 @@
 }
 
 .toast-wrapper .content {
+    flex: 1;
     display: flex;
+    align-items: flex-start;
+    justify-content: center;
     flex-direction: column;
     gap: 9px;
+    padding-left: 21px;
+    pointer-events: all;
 }
 
 .toast-wrapper .toast i {
+    pointer-events: all;
+    width: 12%;
     color: var(--color);
     display: flex;
     justify-content: center;
-    align-items: center;
     font-size: x-large;
 }
 
@@ -55,12 +69,8 @@
         transform: translateX(-5%);
     }
 
-    80% {
-        transform: translateX(0%);
-    }
-
     100% {
-        transform: translateX(-10%);
+        transform: translateX(0%);
     }
 }
 
@@ -98,4 +108,47 @@
     --color: #3498db;
     background-image:
         linear-gradient(to right, #3498db55, #22242F 30%);
+}
+
+/* Below Tablets [LARGE PHONE] */
+@media (max-width: 739px) {
+    .toast-wrapper {
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        top: 30px;
+        padding-right: 0;
+        z-index: 9999;
+    }
+
+    @keyframes show {
+        0% {
+            transform: translateY(0);
+        }
+
+        40% {
+            transform: translateY(-12%);
+        }
+
+        100% {
+            transform: translateY(0);
+        }
+    }
+
+    .title {
+        display: none;
+    }
+
+    .content span {
+        font-size: var(--fs-less-1);
+    }
+
+    .toast-wrapper .content {
+        align-items: center;
+        padding-left: 0;
+    }
+
+    .toast-wrapper .toast i {
+        width: 9%;
+    }
 }
