--- a/fe/src/assets/css/animations.css
+++ b/fe/src/assets/css/animations.css
@@ -18,7 +18,17 @@
 @keyframes slide-left-right-fade {
     0% {
         opacity: 0;
-        transform: translateX(90%);
+        transform: translateX(-12%);
+    } 100% {
+        opacity: 1;
+        transform: translateX(0%);
+    }
+}
+
+@keyframes slide-right-left-fade {
+    0% {
+        opacity: 0;
+        transform: translateX(12%);
     } 100% {
         opacity: 1;
         transform: translateX(0%);
