--- a/fe/src/app/features/list-page/components/list-page-desktop-body/list-page-desktop-body.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/list-page-desktop-body.component.html
@@ -114,7 +114,7 @@
             </div>
 
             <div *ngIf="!isExhibitionLoading" class="right-side__inside__body__gallery__exhibition">
-                <div (click)="togglePreviewModal()" class="right-side__inside__body__gallery__exhibition__item">
+                <div (click)="togglePreviewModal(1)" class="right-side__inside__body__gallery__exhibition__item">
                     <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
                         alt="" class="right-side__inside__body__gallery__exhibition__item__img">
                     <div *ngIf="(getViewportWidth() > getBreakpointValues('TABLET')!)" class="hover-effect-yellow-bright right-side__inside__body__gallery__exhibition__preview">
@@ -212,7 +212,7 @@
     </div>
 </div>
 
-<app-modal (notifyToggleModal)="togglePreviewModal()" *ngIf="isPreviewModalShow" style="display: contents;">
+<app-modal (notifyToggleModal)="togglePreviewModal(null)" *ngIf="isPreviewModalShow" style="display: contents;">
     <div class="preview-drawing-container">
         <h1 class="preview-drawing-container__title">
             Con mèo mà trèo cây cau
@@ -226,10 +226,10 @@
             <button class="hover-effect-yellow-bright btn outline">
                 <i class="fa-solid fa-cart-shopping"></i> <span>Thêm vào giỏ hàng</span>
             </button>
-            <button class="hover-effect-yellow-bright btn outline">
+            <button (click)="moveToDetail()" class="hover-effect-yellow-bright btn outline">
                 <span>Xem chi tiết</span>
             </button>
-            <button (click)="togglePreviewModal()" class="hover-effect-yellow-bright btn outline">
+            <button (click)="togglePreviewModal(null)" class="hover-effect-yellow-bright btn outline">
                 <i class="hover-effect-yellow-bright fa-solid fa-xmark close-button"></i>
                 <span>Thoát</span>
             </button>
