--- a/fe/src/app/features/detail-page/layout/layout.component.html
+++ b/fe/src/app/features/detail-page/layout/layout.component.html
@@ -1,3 +1,10 @@
 <div class="wrapper">
-    
+    <div class="logo-group">
+        <div class="logo-group__content">
+            <app-overlay [z_index]="'3'"></app-overlay>
+            <h1 class="hover-effect-yellow-bright logo-group__content__title">
+                <a routerLink="/" class="nothing logo-group__content__title__responsive-screen">H</a>
+            </h1>
+        </div>
+    </div>
 </div>
