--- a/fe/src/assets/css/animations.css
+++ b/fe/src/assets/css/animations.css
@@ -7,9 +7,11 @@
 
 @keyframes slide-bottom-top-fade {
     0% {
+        transform: scale(0.96);
         opacity: 0;
         transform: translateY(30%);
     } 100% {
+        transform: scale(1);
         opacity: 1;
         transform: translateY(0%);
     }
@@ -17,9 +19,11 @@
 
 @keyframes slide-left-right-fade {
     0% {
+        transform: scale(0.96);
         opacity: 0;
         transform: translateX(-12%);
     } 100% {
+        transform: scale(1);
         opacity: 1;
         transform: translateX(0%);
     }
@@ -27,9 +31,11 @@
 
 @keyframes slide-right-left-fade {
     0% {
+        transform: scale(0.96);
         opacity: 0;
         transform: translateX(12%);
     } 100% {
+        transform: scale(1);
         opacity: 1;
         transform: translateX(0%);
     }
