--- a/fe/src/app/features/list-page/components/list-page-mobile/list-page-mobile.component.html
+++ b/fe/src/app/features/list-page/components/list-page-mobile/list-page-mobile.component.html
@@ -47,84 +47,8 @@
 
         <div class="body__gallery-group">
             <ul *ngIf="!isExhibitionLoading" class="body__gallery-group__list">
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
-                        alt="" class="body__gallery-group__list__item__img">
-                </li>
-                <li (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
+                <li *ngFor="let x of paintingList" (click)="togglePreviewPaintingModal()" class="body__gallery-group__list__item">
+                    <img src="{{x.imgUrl}}"
                         alt="" class="body__gallery-group__list__item__img">
                 </li>
             </ul>
